force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Approver__c/Plant_Approver__c.object-meta.xml
<CustomObject>
    <label>Plant Approver</label>
    <nameField>
        <displayFormat>PA-{000000}</displayFormat>
        <label>Approver Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Plant Approvers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>