force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Approver__c/fields/Approver_Name__c.field-meta.xml
<CustomField>
    <fullName>Approver_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approver Name</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Plant Approver Records</relationshipLabel>
    <relationshipName>Plant_Approver_Records</relationshipName>
    <type>Lookup</type>
</CustomField>