force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Approver__c/fields/Approver_Title__c.field-meta.xml
<CustomField>
    <fullName>Approver_Title__c</fullName>
    <label>Approver Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>