force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Approver__c/fields/Approver_Type__c.field-meta.xml
<CustomField>
    <fullName>Approver_Type__c</fullName>
    <label>Approver Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>