force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Approver__c/fields/Auth_Sector__c.field-meta.xml
<CustomField>
    <fullName>Auth_Sector__c</fullName>
    <label>Auth Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>RESS</fullName>
            </value>
            <value>
                <fullName>GPS</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Polymer</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <default>true</default>
                <label>All</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>