force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Approver__c/fields/Default_Approver__c.field-meta.xml
<CustomField>
    <fullName>Default_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default Approver (Y/N)</label>
    <type>Checkbox</type>
</CustomField>