force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Approver__c/fields/Plant_Approver__c.field-meta.xml
<CustomField>
    <fullName>Plant_Approver__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>PR1064302-603</description>
    <label>Plant Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Auth_Plant_Name__c</field>
            <operation>equals</operation>
            <valueField>Plant_Collaborator__c.Plant__c</valueField>
        </filterItems>
        <filterItems>
            <field>Plant_Collaborator__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Please contact the plant admin to add a plant collaborator if you don&apos;t find the approver in the search results</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Plant_Collaborator__c</referenceTo>
    <relationshipLabel>Plant Approvers</relationshipLabel>
    <relationshipName>Plant_Approvers</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>