force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Approver__c/fields/Shop_Master_view__c.field-meta.xml
<CustomField>
    <fullName>Shop_Master_view__c</fullName>
    <label>Shop (Master view)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assembly</fullName>
            </value>
            <value>
                <fullName>Body</fullName>
            </value>
            <value>
                <fullName>GA</fullName>
            </value>
            <value>
                <fullName>GMS/IE</fullName>
            </value>
            <value>
                <fullName>GSC</fullName>
            </value>
            <value>
                <fullName>Machining</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Paint</fullName>
            </value>
            <value>
                <fullName>Plant Tech</fullName>
            </value>
            <value>
                <fullName>PLOM</fullName>
            </value>
            <value>
                <fullName>Polymers</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Staff</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>