force-app-gwb-source-code/Salesforce_GWB-main/force-app/main/default/objects/Plant_Approver__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Approver_Name__c</columns>
    <columns>Approver_Title__c</columns>
    <columns>Default_Approver__c</columns>
    <columns>Auth_Sector__c</columns>
    <columns>Shop_Master_view__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>